Fri Oct 31 14:10:52 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          No need for lsb

Fri Oct 31 13:49:11 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * ace/WIN32_Asynch_IO.h:
        * ace/WIN32_Asynch_IO.cpp:
          Changed ACE_WIN32_Asynch_Write classes to not use shared_write() method
          for Stream and File IO but use specific write() implementations instead.
          This fixes Asynch File IO support (specifically writing) for Windows.
          Fixes Bugzilla #3762 and #3992.

        * tests/Proactor_File_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added new example/regression test for Asynch File IO using Proactor.

Wed Oct 29 20:22:38 UTC 2014  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/templates/gnu.mpd: Change LDFLAGS for HP-UX to do install_rpath correctly.
          Fixes Bugzilla #4170.

Tue Oct 28 09:51:14 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/docs/templates/gnu.txt:
        * bin/MakeProjectCreator/templates/gnu.mpd:
        * include/makeinclude/wrapper_macros.GNU:
          Added (optional) support for per project output directories for
          object files. Fixes Bugzilla #3868.

Tue Oct 28 08:00:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4189_Regression_Test.cpp:
          Use PF_INET, that is the default argument of ACE_SOCK_Dgram_Bcast

Mon Oct 27 18:06:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          Don't define SO_REUSEPORT when it is not defined, the code
          that uses this as argument to call ACE_OS::setsockopt only works
          when this has been defined. Defining it here to a dummy value
          causes us to call the Windows API with an invalid argument

Mon Oct 27 12:32:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h: